--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "my-app",
+  "name": "malohaja",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.14",
     "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "immer": "^10.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
